tests/rosetta/out/Smalltalk/ackermann-function-2.out
/workspace/mochi/tests/rosetta/out/Smalltalk/ackermann-function-2.st:28: parse error, expected '|' or identifier
